--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
     -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.0.2/dist/minty/bootstrap.min.css" integrity="sha256-H8lNYxq+GipvcZ318w9Gr3Tehxr9VDm+Zw0g+y1L9/s=" crossorigin="anonymous">
 
-    <title>React App</title>
+    <title>Note App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
